# ai-landing-zones

./: .azure-pipelines.yml  README.md  databricks.yml
ai-predictive/src/: cli.py
ai-predictive/src/domain/: README.md
ai-predictive/src/domain/models/: models.py
ai_predictive/: main.py  pyproject.toml
ai_predictive/src/ai_predictive/adaptors/ml_model/sk_forest/: sk_forest.py
ai_predictive/src/ai_predictive/domain/: errors.py  models.py  ports.py  result.py  services.py
automation/python/ai_search/: pyproject.toml
automation/python/ai_search/src/: cli.py
automation/python/src/az_platform/ai_search/: builders.py  client.py  service.py
automation/python/src/domain/: __init__.py
data_products/data_product_1/: .pre-commit-config.yml  Makefile  databricks.yml  main.py  pyproject.toml
data_products/data_product_1/src/data_product_1/: main.py  main_testing.py
data_products/data_product_1/src/data_product_1.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
data_products/data_product_1/src/data_product_1/adaptors/: adaptors.py  cfg.py  common.py
data_products/data_product_1/src/data_product_1/domain/: errors.py  models.py  ports.py  result.py  services.py
infra/: main.bicep
infra/env/: dev.bicepparam  prd.bicepparam  uat.bicepparam
infra/modules/: data_lake.bicep  resource_group.bicep  vnet_peering.bicep
ml_products/credit_decision/: Makefile  databricks.yml  mlflow.db  pyproject.toml
ml_products/credit_decision/mlruns/0/models/m-3848badbd8264fe49d091e87f699c8ce/artifacts/: MLmodel  model.pkl
ml_products/credit_decision/mlruns/0/models/m-4cb000a135be41d7a81a21a70cb5df06/artifacts/: MLmodel  model.pkl  python_env.yaml
ml_products/credit_decision/mlruns/0/models/m-afc14224c3e94069aaf104ce59443399/artifacts/: MLmodel  model.pkl
ml_products/credit_decision/mlruns/0/models/m-bf05e9328e984d4ca983139f57f06c25/artifacts/: MLmodel  model.pkl  requirements.txt
ml_products/credit_decision/mlruns/0/models/m-ea18f2225308436c89dc4161acf029ee/artifacts/: MLmodel  model.pkl
ml_products/credit_decision/mlruns/0/models/m-fe7a1b595d4742589d31422c9b880616/artifacts/: MLmodel  conda.yaml  model.pkl
ml_products/credit_decision/mlruns/1/models/m-1e1d63030127422c9f53d18ff6017366/artifacts/: MLmodel  model.pkl
ml_products/credit_decision/mlruns/2/models/m-0763934a5dfe418b85a44456c0afbd8f/artifacts/: MLmodel  model.pkl
ml_products/credit_decision/mlruns/2/models/m-1404bd20b0ff46cca5648f4a465d877e/artifacts/: MLmodel  model.pkl
ml_products/credit_decision/mlruns/2/models/m-314ca731593e4c90ac185e768d2cc482/artifacts/: MLmodel  model.pkl
ml_products/credit_decision/mlruns/2/models/m-3a5bd9e1202d4184b26a77667392b8eb/artifacts/: MLmodel  model.pkl
ml_products/credit_decision/mlruns/2/models/m-6520c79a94034d6d82172b4649e099af/artifacts/: MLmodel  model.pkl
ml_products/credit_decision/mlruns/2/models/m-90f7e073225941d9ba185006d9126bf8/artifacts/: MLmodel  model.pkl
ml_products/credit_decision/mlruns/2/models/m-edb79068a84f421ca77b94e162f90a92/artifacts/: MLmodel  model.pkl
ml_products/credit_decision/src/credit_decision/: main.py
ml_products/credit_decision/src/credit_decision.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ml_products/credit_decision/src/credit_decision/adaptors/ml_model/sk_forest/: adaptors.py  sk_forest.py
ml_products/credit_decision/src/credit_decision/domain/: errors.py  models.py  ports.py  services.py
ml_products/ml_product_1/src/: pyproject.toml
ml_products/ml_product_1/src/ml_product_1/adaptors/ml_model/sk_forest/: config.py  sk_forest.py
ml_products/ml_product_1/src/ml_product_1/domain/: errors.py  services.py
pipelines/: mlops-cicd.yml
platform/automation/: README.md
