[project]
name = "data-product-1"
version = "0.1.0"
description = "Demo to create Model Ready Data Product"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "azure-cli==2.82.0",
    "azure-search-documents==11.7.0b2",
    "databricks-connect==15.4.*",
    "ipdb>=0.13.13",
    "ipython>=9.9.0",
    "langchain>=1.2.7",
    "numpy",
    "pip-licenses>=5.5.1",
    "scikit-learn",
    "semantic-kernel>=1.37.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.8",
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
    "types-requests",
]


[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["data_product_1*"]



# --------------------
# mypy configuration
# --------------------
[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true

disallow_any_unimported = true
disallow_any_expr = true
disallow_any_generics = true
disallow_any_decorated = true

no_implicit_optional = true
check_untyped_defs = true

exclude = [
    "tests/",
]

# --------------------
# pytest (optional)
# --------------------
[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "azure-cli>=2.0.65",
    "azure-identity==1.16.1",
    "bandit>=1.9.3",
    "isort>=7.0.0",
    "mypy>=1.19.1",
    "openai>=2.16.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
]
