[project]
name = "credit-decision"
version = "0.1.0"
description = "Demo to create credit decisioning model"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "databricks-connect==15.4.0",
    "ipython>=9.10.0",
    "mlflow>=3.9.0",
    "numpy>=1.26.4",
    "pip-licenses>=5.5.1",
    "scikit-learn>=1.8.0",
]

[project.optional-dependencies]
dev = [
]

[project.scripts]
credit_decision_train = "credit_decision.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["credit_decision*"]



# --------------------
# mypy configuration
# --------------------
[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
ignore_missing_imports = false
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
disallow_any_unimported = true
disallow_any_expr = false
disallow_any_generics = true
disallow_any_decorated = true
no_implicit_optional = true
check_untyped_defs = true

exclude = [
    "tests/",
]

# --------------------
# pytest (optional)
# --------------------
[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "bandit>=1.9.3",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
]
