[project]
name = "az-platform"
version = "0.1.0"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
  "pytest",
  "mypy",
  "types-PyYAML",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_any_generics = true
no_implicit_optional = true
check_untyped_defs = true
exclude = ["client.py", "cli.py"]
